[project]
name = "vaql-ui"
version = "0.1.0"
description = "VAQL UI components"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.8.0.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
